--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>蒋权峰你来啦</title>
+    <style>
+      h1{
+        position:absolute;
+        top:40%;
+        left:45%;
+        animation: tg linear 5s infinite;
+      }
+      @keyframes tg{
+        0%{
+          transform: scale3d(1)
+        }
+        50%{
+          transform: scale3d(5)
+        }
+        100%{
+          transform: scale3d(1)
+        }
+      }
+    </style>
 </head>
 <body>
+    <h1>舔狗b4</h1>
     <canvas></canvas>
     <script>
         var canvas = document.querySelector("canvas"),
