--- a/index.html
+++ b/index.html
@@ -127,21 +127,21 @@ window.onload=function starttime(){
         ptimer = setTimeout(starttime,1000); // 添加计时器
 }
 
-    function time(obj,futimg){
-        var nowtime = new Date().getTime(); // 现在时间转换为时间戳
-        var futruetime =  new Date(futimg).getTime(); // 未来时间转换为时间戳
-        var msec = nowtime-futruetime; // 毫秒 未来时间-现在时间
-        var time = (msec/1000);  // 毫秒/1000
-        var day = parseInt(time/86400); // 天  24*60*60*1000 
-        var hour = parseInt(time/3600)-24*day;    // 小时 60*60 总小时数-过去的小时数=现在的小时数 
-        var minute = parseInt(time%3600/60); // 分 -(day*24) 以60秒为一整份 取余 剩下秒数 秒数/60 就是分钟数
-        var second = parseInt(time%60);  // 以60秒为一整份 取余 剩下秒数
-//              console.log(hour+":"+minute+":"+second)
-//              alert(hour)
-        obj.innerHTML="To 晓丽<br>咱俩认识的时间已经：<br>"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"了<br><span>人生最好的状态 是每天醒来 <br> 面朝阳光 嘴角上扬 <br> 不羡慕谁 不讨好谁 <br> 不再依恋谁 默默努力 <br> 活成自己想要的模样 </span>"
+//     function time(obj,futimg){
+//         var nowtime = new Date().getTime(); // 现在时间转换为时间戳
+//         var futruetime =  new Date(futimg).getTime(); // 未来时间转换为时间戳
+//         var msec = nowtime-futruetime; // 毫秒 未来时间-现在时间
+//         var time = (msec/1000);  // 毫秒/1000
+//         var day = parseInt(time/86400); // 天  24*60*60*1000 
+//         var hour = parseInt(time/3600)-24*day;    // 小时 60*60 总小时数-过去的小时数=现在的小时数 
+//         var minute = parseInt(time%3600/60); // 分 -(day*24) 以60秒为一整份 取余 剩下秒数 秒数/60 就是分钟数
+//         var second = parseInt(time%60);  // 以60秒为一整份 取余 剩下秒数
+// //              console.log(hour+":"+minute+":"+second)
+// //              alert(hour)
+//         obj.innerHTML="To 晓丽<br>咱俩认识的时间已经：<br>"+day+"天"+hour+"小时"+minute+"分"+second+"秒"+"了<br><span>人生最好的状态 是每天醒来 <br> 面朝阳光 嘴角上扬 <br> 不羡慕谁 不讨好谁 <br> 不再依恋谁 默默努力 <br> 活成自己想要的模样 </span>"
 
-        return true;
-    }    
+//         return true;
+//     }    
     </script>
 </body>
 </html>
