--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         position:absolute;
         top:40%;
         left:45%;
-        animation: tg linear 5s infinite;
+        animation: tg linear infinite 5s; 
       }
       @keyframes tg{
         0%{
