--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
       }
       @keyframes tg{
         0%{
-          transform: scale3d(1)
+          transform: scale3d(1);
+          -webkit-transform: scale3d(1);
         }
         50%{
-          transform: scale3d(5)
+          transform: scale3d(5);
+          -webkit-transform: scale3d(5);
         }
         100%{
-          transform: scale3d(1)
+          transform: scale3d(1);
+          -webkit-transform: scale3d(1);
         }
       }
     </style>
