--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
         position:absolute;
         top:40%;
         left:45%;
-        animation: tg linear infinite 5s; 
+        animation: tg 5s linear infinite; 
       }
       @keyframes tg{
         0%{
-          transform: scale3d(1);
-          -webkit-transform: scale3d(1);
+          transform: scale(1);
+          -webkit-transform: scale(1);
         }
         50%{
-          transform: scale3d(5);
-          -webkit-transform: scale3d(5);
+          transform: scale(5);
+          -webkit-transform: scale(5);
         }
         100%{
-          transform: scale3d(1);
-          -webkit-transform: scale3d(1);
+          transform: scale(1);
+          -webkit-transform: scale(1);
         }
       }
     </style>
