--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         left:45%;
         animation: tg 5s linear infinite; 
       }
-      @keyframes tg{
+      @-webkit-keyframes tg{
         0%{
           transform: scale(1);
           -webkit-transform: scale(1);
